--- a/src/app/shopping-cart/shopping-cart.page.scss
+++ b/src/app/shopping-cart/shopping-cart.page.scss
@@ -74,11 +74,13 @@
 }
 
 .cantidad{
-    text-align: center;
+    width: 22px;
+    height: 22px;
+    border-radius: 5px;
+    border: solid 1px gray;
     vertical-align: middle;
-    line-height: 90px;
-    border: black 1px solid;
-    margin: auto;
+    font-size: 12px;
+    text-align: center;
 }
 
 .cantidad_content{
