--- a/src/app/shopping-cart/shopping-cart.page.html
+++ b/src/app/shopping-cart/shopping-cart.page.html
@@ -1,51 +1,42 @@
 <app-header></app-header>
+<!---->
 <ion-content>
 <h2 class="Titulo">Carrito</h2>
 <ion-row class="Total">
   <ion-col size=8 class="A_pagar_header">Total a Pagar:</ion-col>
   <ion-col size=4 class="A_pagar">$ 3,65</ion-col>
 </ion-row>
-<ion-list >
-  <ion-card *ngFor="let productos of cart">
-      <ion-row class="agregar">
-        <ion-col size=3 class="col_foto_producto">
-          <ion-img src="http://cabutoshop.pythonanywhere.com{{productos.imagen}}" class="foto_producto"></ion-img>
-        </ion-col>
-        <ion-col size=9 class="detalle">
-          <ion-row >
-            <ion-button class="borrar_content" color="medium" fill="clear">
-              <ion-img src="../assets/img/borrar.png" class="borrar"></ion-img>
-            </ion-button>
-          </ion-row>
-          <ion-row>
-            <ion-card-title class="nombre_producto">
-              {{productos.nombre}}
-            </ion-card-title>
-          </ion-row>
-          <ion-row>
-            <ion-col size=8>
-              <ion-row class="row_detalles">
-                  <ion-button class="restar_content" color="medium" fill="clear">
-                    <ion-img src="../assets/img/restar.png" class="restar" (click)= quitar(productos.nombre)></ion-img>
-                  </ion-button>
-                  <input type="text" tag = "barra" name="" id="{{productos.nombre}}" disabled="true" class="cantidad" placeholder="{{productos.cantidad}}" value  = "{{productos.cantidad}}" >
-                  <ion-button  class="sumar_content" color="medium" fill="clear">
-                    <ion-img src="../assets/img/agregar.png" class="sumar" (click)= agregar(productos.nombre)></ion-img>
-                  </ion-button>
-              </ion-row>
-            </ion-col>
-            <ion-col size=4 class= "col_unitario">
-              <ion-label class="unitario">
-                ${{productos.subtotal}}
-              </ion-label>
-            </ion-col> 
-          </ion-row>
-        </ion-col>
-      </ion-row>
-  </ion-card>
-</ion-list>
-  <ion-img src="../assets/img/pagar.png" class="pagar"></ion-img>
-  <ion-button style="--background: var(--ion-color-naranja-oscuro)" (click)= regresar()>Regresar</ion-button>
+
+
+<div>
+  <div class="contener-producto"  *ngFor="let productos of cart">
+      <div class="div-producto">
+        <div class = "borrar_content"><img src="../assets/img/borrar.png" class="borrar"></div>
+          <div class="contener-columnaI">
+              <div class="producto">
+                  <img name="imagen" src="http://cabutoshop.pythonanywhere.com{{productos.imagen_producto}}"  >
+              </div>
+          </div>
+          <div class="contener-columna">
+              <div class="nombre">
+                  <h6 class="nombre-producto" name="nombre">{{productos.nombre_producto}}</h6>
+              </div>
+          </div>
+          <div class = "contenedor-centro">
+            <div class="producto-carrito">
+              <img src="../assets/img/agregar.png" width="10" height="10" class="btn-producto" id="mas" (click)= agregar(productos.nombre_producto)>
+              <input type="text" tag = "barra" name="" id="{{productos.nombre_producto}}" disabled="true" class="cantidad" placeholder="{{productos.cantidad}}" value  = "{{productos.cantidad_producto}}" >
+              <img src="../assets/img/restar.png" width="10" height="3" class="btn-producto" id="menos" (click)= quitar(productos.nombre_producto)>
+          </div>
+          </div>
+          <div class="contener-columna-centrar">
+              <div class="precio">
+                  <h4 name="precio">${{productos.subtotal}}</h4>
+              </div>
+          </div>
+      </div>
+  </div>
+</div>
 </ion-content>
 <app-footer></app-footer>
 
