arreglo del diseño del carrito

--- a/src/app/shopping-cart/shopping-cart.page.html
+++ b/src/app/shopping-cart/shopping-cart.page.html
@@ -37,6 +37,11 @@
       </div>
   </div>
 </div>
+<div class ="btns">
+  <div class ="btn-regresar"><ion-button style="--background: var(--ion-color-naranja-oscuro)" (click)= regresar()>Regresar</ion-button></div>
+  <div class = "espacio"></div>
+  <div class ="btns-pago"><img src="../assets/img/pagar.png" class="pagar"><!--</ion-img>--></div>
+</div>
 </ion-content>
 <app-footer></app-footer>
 
