--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -3,7 +3,7 @@
   <div class= "menu_hamburguesa"><ion-menu-button menu="main-menu"></ion-menu-button></div>
   <!--<ion-buttons slot="start"><ion-menu-button color="primary" menu="main-menu"></ion-menu-button></ion-buttons>-->
   <div class= "headerR" > <img src="../assets/img/header_final.png" size= 12></div>
-  <div class= "carrito_logo"> <img [src]="carrito" (click)="openCart()"></div>
+  <div class= "carrito_logo"> <img [src]="carrito ? carrito :'../assets/img/carrito.png'" (click)="changeCart()"></div>
 </div>
   <!--<div class= "carrito_logo"> <ion-img [src]="carrito" (click)="openCart(); changeCart()"></ion-img></div>-->
 <!--
