arreglo de botones

--- a/src/app/ofertas/ofertas.page.html
+++ b/src/app/ofertas/ofertas.page.html
@@ -34,14 +34,17 @@
                                 <h4>${{productos.precio}}</h4>-->
                             </div>
                             <div class="oferta-carrito">
-                                <img src="../assets/img/agregar.png" width="10" height="10" class="btn-producto" id="mas" (click)= agregar(ofertas.nombre) >
-                                <!--<img src="../assets/img/agregar.png" width="10" height="10" class="btn-producto" id="mas" (click)= agregar(productos.nombre)>
+                                <!--<img src="../assets/img/agregar.png" width="10" height="10" class="btn-producto" id="mas" (click)= agregar(ofertas.nombre) >-->
+                                <img src="../assets/img/agregar.png" width="10" height="10" class="btn-producto" id="mas" (click)= agregar(ofertas.nombre)>
                                 <input type="text" tag = "barra" name="" id="{{productos.nombre}}" disabled="true" class="estilo-cantidad" placeholder="0" value  = "0" >
-                                <img src="../assets/img/restar.png" width="10" height="3" class="btn-producto" id="menos" (click)= quitar(productos.nombre)>-->
+                                <img src="../assets/img/restar.png" width="10" height="3" class="btn-producto" id="menos" (click)= quitar(ofertas.nombre)>
                             </div>
-                            <!--<div class="carrito">
-                                <img src="../assets/img/carrito_activo.png" width="25" height="25" (click)=showLoading(productos.nombre)>
-                            </div>-->
+                            <div class="contener-columna-centrar">
+                                <div class="carrito">
+                                    <img src="../assets/img/carrito_activo.png" width="25" height="25" (click)=carrito(ofertas.nombre)>
+                                </div>
+                            </div>
+                            
                         </div>
                     </div>
                 </div>
