--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -92,3 +92,11 @@ ion-header{
 ion-menu-button{
     --color: white;
 }
+
+
+.btn_regresar{
+    float:left;
+    position:absolute;
+    top:20px;
+    left:10px;
+  }
