--- a/src/app/shopping-cart/shopping-cart.page.scss
+++ b/src/app/shopping-cart/shopping-cart.page.scss
@@ -379,16 +379,35 @@ div.carrito img{
     text-align: center;
     display: flex;
     .btn-regresar{
-        padding: 25px 20px 20px 25px;
+        //padding: 25px 20px 20px 25px;
         text-align: left;
+        width: 7rem;
     }
 
     .espacio{
-        width: 6rem;
+        width: 7rem;
     }
     .btn-pagar{
         text-align: right;
         
 
     }
+}
+
+.atras{
+    position: absolute;
+    //bottom: 0;
+    //right: 0;
+    //margin: 0% 5% 0% 0%;
+    height: 4.5rem;
+    width: 4.5rem;
+    top:0;
+    left:15.5rem;
+    padding: 20px 20px 20px 20px;
+}
+
+.btn_regresar{
+    text-align: center;
+    display: flex;
+    text-align: right;
 }
