arreglo en carrito

--- a/src/app/shopping-cart/shopping-cart.page.scss
+++ b/src/app/shopping-cart/shopping-cart.page.scss
@@ -218,6 +218,7 @@ padding: 0px 0px 0px 0px;
     // vertical-align: bottom;
     // justify-content: end;
     // width: 100%;
+    top:1.5rem;
     position: relative;
     //left: 12rem;
     //right: 30px;
@@ -322,7 +323,7 @@ div.precio h4{
     position: relative;
     //padding-left: 1rem;
     text-align: center;
-    font-size: 0.8rem;
+    font-size: 1rem;
         //padding-right: 20px;
     //padding-right: 30px;
 
