--- a/src/app/shopping-cart/shopping-cart.page.html
+++ b/src/app/shopping-cart/shopping-cart.page.html
@@ -1,7 +1,7 @@
 <app-header></app-header>
 <!---->
 <ion-content>
- <!-- <div class ="btn_regresar"> <img src="../assets/img/atras.png" class="atras" (click)="regresar()"> </div>-->
+ <div class ="btn_regresar"> <img src="../assets/img/atras.png" class="atras" (click)="regresar()"> </div>
   <!--<ion-button style="--background: var(--ion-color-naranja-oscuro)" (click)= regresar()>Regresar</ion-button>-->
 <h2 class="Titulo">Carrito</h2>
 <ion-row class="Total">
@@ -16,7 +16,7 @@
 <div *ngIf="prodLen > 0">
   <div class="contener-producto"  *ngFor="let productos of products">
       <div class="div-producto" >
-        <div class = "borrar_content"><img src="../assets/img/borrar.png" class="borrar"></div>
+        <div class = "borrar_content" (click)="eliminar()" ><img src="../assets/img/borrar.png" class="borrar" ></div>
           <div class="contener-columnaI">
               <div class="producto">
                   <img name="imagen" src="http://cabutoshop.pythonanywhere.com{{productos.imagen_producto}}"  >
@@ -47,7 +47,7 @@
 <div *ngIf="oferLen > 0">
   <div class="contener-producto"  *ngFor="let ofert of oferts">
       <div class="div-producto" (onload) ="transformar(ofert.nombre_oferta)" >
-        <div class = "borrar_content"><img src="../assets/img/borrar.png" class="borrar"></div>
+        <div class = "borrar_content" (click)="eliminar()"><img src="../assets/img/borrar.png" class="borrar"></div>
           <div class="contener-columnaI">
               <div class="producto">
                   <img name="imagen" src="http://cabutoshop.pythonanywhere.com{{ofert.imagen_oferta}}"  >
@@ -77,7 +77,7 @@
 <div *ngIf="comdLen > 0">
   <div class="contener-producto"  *ngFor="let combo of combos">
       <div class="div-producto">
-        <div class = "borrar_content"><img src="../assets/img/borrar.png" class="borrar"></div>
+        <div class = "borrar_content" (click)="eliminar()"><img src="../assets/img/borrar.png" class="borrar"></div>
           <div class="contener-columnaI">
               <div class="producto">
                   <img name="imagen" src="http://cabutoshop.pythonanywhere.com{{combo.imagen}}"  >
